CHANGES
=======

0.2
---

- Move to fanstatic for include static resources.
- Convert SQLAlchemy tables to Declarative syntax.
- Fix how content types appear in Add menu.
- Document subclasses should not have duplicate 'body' field.
- Added batching of blog entries on overview and settings for it.
- Added dynamic batching via ajax loads.


0.1
---

- Initial release.