@@ -153,5 +153,11 @@ def includeme_view(config):
 
 
 def includeme(config):
+    settings = config.get_settings()
+    if 'kotti_blog.asset_overrides' in settings:
+        for override in [a.strip()
+                         for a in settings['kotti_blog.asset_overrides'].split()
+                         if a.strip()]:
+            config.override_asset(to_override='kotti_blog', override_with=override)
     includeme_edit(config)
     includeme_view(config)
